--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -331,7 +331,7 @@ a:hover {
 }
 
 .burger-house-company {
-  height: 250vh;
+  height: 130vh;
   background-color: white;
   z-index: -2000;
 }
@@ -415,3 +415,72 @@ a:hover {
   font-size: 25px;
   text-align: center;
 }
+
+
+.burger-house-slider {
+  height: 150vh;
+  background-color: white;
+}
+
+/* //////////////////////////////////////////////////////////////////////////////// */
+
+.Slider {
+  color: #ffffff;
+}
+
+.item {
+  display: flex !important;
+  height: 80vh !important;
+}
+
+.inner-Image {
+  max-width: 1700px;
+  height: 509px;width: 90%;
+  margin: 0 auto;
+  /* text-align: center; */
+  /* font-size: 40px; */
+  background-color: rgb(255 255 255 / 20%);
+  border-radius: 6px;
+  transition: .3s all linear;
+box-shadow: 7px 7px 20px 5px #979797;}
+
+.inner-Image span {
+  display: grid;
+}
+
+.slick-dots {
+  left: -752px;bottom: 264px !important;
+}
+
+.slick-dots li button {
+  background-color: #ffffff !important;
+  border-radius: 50%;
+}
+
+.out {
+  transition: 300ms all linear;
+}
+
+.inner-Image span:nth-child(1) {
+  float: right;
+  margin-top: 35px;
+margin-right: 35px;}
+
+.inner-Image span:nth-child(2) {
+  font-family: 'Bebas Neue';
+  color: #3d3d3d;
+  float: left;
+  margin-left: 54px;
+margin-top: 27px;font-size: 50px;}
+
+.inner-Image span:nth-child(3) {
+  font-family: "Alfa Slab One", cursive;
+  color: #3d2514;
+  margin-left: -144px;
+  margin-top: 94px;
+  float: left;
+font-size: 50px;}
+
+.inner-Image span:nth-child(4) {
+  color: #3d3d3d;
+font-size: 20px;margin-left: 55px;margin-top: 174px;width: 800px;}
