--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -244,7 +244,7 @@ body {
   margin-top: -187px;
   margin-left: 25px;
   color: white;
-  font-family: 'Bebas Neue';
+  font-family: "Bebas Neue";
   font-size: 30px;
 }
 
@@ -252,7 +252,7 @@ body {
   margin-top: -29px;
   margin-left: 25px;
   color: white;
-  font-family: 'Bebas Neue';
+  font-family: "Bebas Neue";
   font-size: 48px;
 }
 
@@ -264,19 +264,17 @@ a:hover {
   margin-left: 39.5%;
   width: 160px;
   height: 60px;
-  color: #fff;
+  color: rgb(255, 255, 255);
   border-radius: 5px;
   padding: 10px 25px;
-  font-family: 'Lato', sans-serif;
+  font-family: Lato, sans-serif;
   font-weight: 500;
   background: transparent;
   cursor: pointer;
-  transition: all 0.3s ease;
+  transition: all 0.3s ease 0s;
   position: relative;
   display: inline-block;
-  box-shadow: inset 2px 2px 2px 0px rgba(255, 255, 255, .5),
-    7px 7px 20px 0px rgba(0, 0, 0, .1),
-    4px 4px 5px 0px rgba(0, 0, 0, .1);
+  box-shadow: rgba(255, 255, 255, 0.5) 2px 2px 2px 0px inset, rgba(0, 0, 0, 0.1) 7px 7px 20px 0px, rgba(0, 0, 0, 0.1) 4px 4px 5px 0px;
   outline: none;
 }
 
@@ -284,45 +282,41 @@ a:hover {
   width: 200px;
   height: 50px;
   line-height: 42px;
-  padding: 0;
+  padding: 0px;
   border: none;
-  background: #ffc045;
-  background: linear-gradient(180deg, #ffc045 0%, #c38100 100%);
+  background: linear-gradient(rgb(255, 192, 69) 0%, rgb(195, 129, 0) 100%);
 }
 
 .btn-5:hover {
-  color: #ffc045;
-  background: #ffffff;
+  color: rgb(255, 192, 69);
+  background: rgb(255, 255, 255);
   box-shadow: none;
 }
 
-.btn-5:before,
-.btn-5:after {
-  content: '';
+.btn-5::before,
+.btn-5::after {
+  content: "";
   position: absolute;
-  top: 0;
-  right: 0;
+  top: 0px;
+  right: 0px;
   height: 2px;
-  width: 0;
-  background: #ffc045;
-  box-shadow:
-    -1px -1px 5px 0px #fff,
-    7px 7px 20px 0px #0003,
-    4px 4px 5px 0px #0002;
-  transition: 400ms ease all;
+  width: 0px;
+  background: rgb(255, 192, 69);
+  box-shadow: rgb(255, 255, 255) -1px -1px 5px 0px, rgba(0, 0, 0, 0.2) 7px 7px 20px 0px, rgba(0, 0, 0, 0.133) 4px 4px 5px 0px;
+  transition: all 400ms ease 0s;
 }
 
-.btn-5:after {
+.btn-5::after {
   right: inherit;
   top: inherit;
-  left: 0;
-  bottom: 0;
+  left: 0px;
+  bottom: 0px;
 }
 
-.btn-5:hover:before,
-.btn-5:hover:after {
+.btn-5:hover::before,
+.btn-5:hover::after {
   width: 100%;
-  transition: 800ms ease all;
+  transition: all 800ms ease 0s;
 }
 
 .custom-buton-div {
@@ -343,11 +337,11 @@ a:hover {
 .burger-house-company-text-s-f {
   font-family: "Alfa Slab One", cursive;
   font-size: 70px;
-  color: #3d2514;
+  color: rgb(61, 37, 20);
 }
 
 .burger-house-company-text-s-s {
-  font-family: 'Bebas Neue';
+  font-family: "Bebas Neue";
   width: 63%;
   margin-left: 18.5%;
   font-size: 30px;
@@ -377,19 +371,19 @@ a:hover {
 
 .burger-house-company-f-product-f-t,
 .burger-house-company-t-product-f-t {
-  color: #3d2514;
-  font-family: 'Bebas Neue';
+  color: rgb(61, 37, 20);
+  font-family: "Bebas Neue";
   font-size: 45px;
   margin-left: 55px;
 }
 
 .burger-house-company-f-product-s-t,
 .burger-house-company-t-product-s-t {
-  color: #3d2514;
-  font-family: 'Courier New', Courier, monospace;
+  color: rgb(61, 37, 20);
+  font-family: "Courier New", Courier, monospace;
   font-weight: bold;
   font-size: 25px;
-  width: 80%;
+  width: 94%;
   text-align: center;
 }
 
@@ -400,33 +394,30 @@ a:hover {
 }
 
 .burger-house-company-s-product-f-t {
-  color: #3d2514;
-  font-family: 'Bebas Neue';
+  color: rgb(61, 37, 20);
+  font-family: "Bebas Neue";
   font-size: 45px;
   margin-left: 20px;
   align-items: center;
 }
 
 .burger-house-company-s-product-s-t {
-  color: #3d2514;
-  font-family: 'Courier New', Courier, monospace;
+  color: rgb(61, 37, 20);
+  font-family: "Courier New", Courier, monospace;
   font-weight: bold;
   margin-left: -190px;
   font-size: 25px;
   text-align: center;
-}
-
+width: 163%;}
 
 .burger-house-slider {
-  height: 210vh;
+  height: 145vh;
   background-color: white;
   max-width: 100%;
 }
 
-/* //////////////////////////////////////////////////////////////////////////////// */
-
 .Slider {
-  color: #ffffff;
+  color: rgb(255, 255, 255);
 }
 
 .item {
@@ -438,13 +429,11 @@ a:hover {
   max-width: 1700px;
   height: 509px;
   width: 90%;
-  margin: 0 auto;
-  /* text-align: center; */
-  /* font-size: 40px; */
-  background-color: rgb(255 255 255 / 20%);
+  margin: 0px auto;
+  background-color: rgba(255, 255, 255, 0.2);
   border-radius: 6px;
-  transition: .3s all linear;
-  box-shadow: 7px 7px 20px 5px #979797;
+  transition: all 0.3s linear 0s;
+  box-shadow: rgb(151, 151, 151) 7px 7px 20px 5px;
 }
 
 .inner-Image span {
@@ -457,12 +446,12 @@ a:hover {
 }
 
 .slick-dots li button {
-  background-color: #ffffff !important;
   border-radius: 50%;
+  /* background-color: rgb(255, 255, 255) !important; */
 }
 
 .out {
-  transition: 300ms all linear;
+  transition: all 300ms linear 0s;
 }
 
 .inner-Image span:nth-child(1) {
@@ -472,8 +461,8 @@ a:hover {
 }
 
 .inner-Image span:nth-child(2) {
-  font-family: 'Bebas Neue';
-  color: #3d3d3d;
+  font-family: "Bebas Neue";
+  color: rgb(61, 61, 61);
   float: left;
   margin-left: 54px;
   margin-top: 27px;
@@ -482,7 +471,7 @@ a:hover {
 
 .inner-Image span:nth-child(3) {
   font-family: "Alfa Slab One", cursive;
-  color: #3d2514;
+  color: rgb(61, 37, 20);
   margin-left: -144px;
   margin-top: 94px;
   float: left;
@@ -490,7 +479,7 @@ a:hover {
 }
 
 .inner-Image span:nth-child(4) {
-  color: #3d3d3d;
+  color: rgb(61, 61, 61);
   font-size: 20px;
   margin-left: 55px;
   margin-top: 174px;
@@ -499,6 +488,7 @@ a:hover {
 
 .burger-house-reservation-table {
   display: flex;
+  margin-top: 100px;
 }
 
 .burger-house-reservation-table-left-image-s {
@@ -507,19 +497,19 @@ a:hover {
 }
 
 .burger-house-reservation-table-right-image {
-  margin-left: 191px;
   margin-top: 180px;
+  padding-right: 0px;
 }
 
 .burger-house-reservation-table-center-text p:nth-child(1) {
-  color: #3d2514;
+  color: rgb(61, 37, 20);
   font-size: 60px;
-  font-family: 'Bebas Neue';
+  font-family: "Bebas Neue";
   height: 60px;
 }
 
 .burger-house-reservation-table-center-text p:nth-child(2) {
-  color: #3d2514;
+  color: rgb(61, 37, 20);
   font-family: "Alfa Slab One", cursive;
   font-size: 80px;
   width: 843px;
@@ -531,10 +521,8 @@ a:hover {
 }
 
 .burger-house-reservation-table-left-image-f {
-  margin-left: 30px;
+  margin-left: 0px;
 }
-
-/* ////////////////////////////////////////////////////////////////////////////////////// */
 
 .burger-house-reservation-table-center-text-box {
   margin-top: 235px;
@@ -543,14 +531,14 @@ a:hover {
 }
 
 .login__input {
-  border: 2px solid #f99400;
+  border: 2px solid rgb(249, 148, 0);
   background: none;
   border-radius: 7px;
   padding: 10px;
   margin: 3px;
   font-weight: 700;
   width: 100%;
-  transition: .2s;
+  transition: all 0.2s ease 0s;
   display: flex;
 }
 
@@ -558,7 +546,7 @@ a:hover {
 .login__input:focus,
 .login__input:hover {
   outline: none;
-  border-color: #bd7000;
+  border-color: rgb(189, 112, 0);
 }
 
 .tasima {
@@ -567,14 +555,14 @@ a:hover {
   user-select: none;
   display: flex;
   position: absolute;
-  top: 0;
-  left: 0;
+  top: 0px;
+  left: 0px;
   height: 100%;
   padding: 1rem 0.9rem;
   pointer-events: none;
   border: 1px solid transparent;
-  transform-origin: 0 0;
-  transition: opacity .1s ease-in-out, transform .1s ease-in-out;
+  transform-origin: 0px 0px;
+  transition: opacity 0.1s ease-in-out 0s, transform 0.1s ease-in-out 0s;
 }
 
 .col-6 {
@@ -586,13 +574,92 @@ a:hover {
 }
 
 .button-find-or-order {
-  font-family: 'Bebas Neue';
+  font-family: "Bebas Neue";
   font-size: 30px;
   height: 48px;
-  border: none !important;
-  color: #ffffff !important;
   align-items: center;
   display: flex;
   justify-content: center;
-  background-color: #bf2222;
+  background-color: rgb(191, 34, 34);
+  border: none !important;
+  color: rgb(255, 255, 255) !important;
+}
+
+.burger-house-reservation-table-center-text-box {
+  padding-right: 165px;
+  padding-left: 26px;
+}
+
+.burger-house-site-end {
+  height: 81.1vh;
+  background-image: url("../img/burger-house-end.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+.burger-house-site-end-backgroundimage {
+  width: 1903px;
+  z-index: -5000;
+}
+
+.burger-house-site-end-logo {
+  margin-left: 70px;
+  padding-top: 70px;
+}
+
+.burger-house-site-end-left-text {
+  color: white;
+  font-size: 20px;
+  width: 670px;
+  margin-top: 125px;
+  margin-left: 73px;
+}
+
+.burger-house-site-end-right-ul {
+  list-style: none;
+  margin-top: 117px;
+  margin-left: 1307px;
+}
+
+.burger-house-site-end-right-li-1,
+.burger-house-site-end-right-li-2 {
+  display: flex;
+}
+
+.burger-house-site-end-right-li-1 img,
+.burger-house-site-end-right-li-2 img {
+  padding-top: 10px;
+  width: 40px;
+  height: 40px;
+}
+
+.burger-house-site-end-right-li-1 img {
+  width: 34px !important;
+  padding-left: 7px;
+}
+
+.burger-house-site-end-right-li-1 p,
+.burger-house-site-end-right-li-2 p {
+  color: white;
+  padding-left: 15px;
+  font-size: 30px;
+}
+
+.burger-house-site-end-left-bottom-text {
+  color: white;
+  font-size: 17px;
+  margin-left: 73px;
+}
+
+.burger-house-site-end-right-bottom-logo-s ul{
+  display: flex;
+  list-style: none;
+  float: right;
+  margin-top: -40px;
+  margin-right: 69px;
+}
+
+.burger-house-site-end-right-bottom-logo-s ul li{
+  padding-left: 10px;
 }
