--- a/assets/css/button2.css
+++ b/assets/css/button2.css
@@ -788,7 +788,7 @@ h1 {
   line-height: 42px;
   -webkit-perspective: 230px;
   perspective: 230px;
-}
+z-index: 10000;}
 
 .btn-12 span {
   background: rgb(0, 172, 238);
@@ -855,5 +855,5 @@ h1 {
 }
 
 .ortancabuton {
-  margin-left: 127px;
+  margin-left: -130px;
 }
