--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1134,6 +1134,7 @@ width: 415px !important;}
   .burger-house-social-media-icon-w img {
     width: 45px;
     margin-left: -80px;
+    background-color: red;
   }
 
   .burger-house-site-end-right-bottom-logo-s ul {
